isenne.dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isenne-dev
spec:
  selector:
    matchLabels:
      app: isenne-dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: isenne-dev
    spec:
      containers:
        - name: isenne-dev
          image: bitnami/wordpress
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: isenne-dev-storage
              mountPath: /var/www/html
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
      volumes:
        - name: isenne-dev-storage
          persistentVolumeClaim:
            claimName: isenne-dev-lh-pvc
