isenne.dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isenne-dev-service
spec:
  selector:
    app: isenne-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
